; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/ti/extr_fapll.c_ti_fapll_synth_get_frac_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/ti/extr_fapll.c_ti_fapll_synth_get_frac_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.fapll_synth = type { i32 }

@SYNTH_MAX_DIV_M = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64)* @ti_fapll_synth_get_frac_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ti_fapll_synth_get_frac_rate(%struct.clk_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.clk_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.fapll_synth*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %10 = call %struct.fapll_synth* @to_synth(%struct.clk_hw* %9)
  store %struct.fapll_synth* %10, %struct.fapll_synth** %5, align 8
  %11 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i64 @ti_fapll_synth_recalc_rate(%struct.clk_hw* %11, i64 %12)
  store i64 %13, i64* %6, align 8
  %14 = load %struct.fapll_synth*, %struct.fapll_synth** %5, align 8
  %15 = getelementptr inbounds %struct.fapll_synth, %struct.fapll_synth* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @readl_relaxed(i32 %16)
  %18 = load i64, i64* @SYNTH_MAX_DIV_M, align 8
  %19 = and i64 %17, %18
  store i64 %19, i64* %8, align 8
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* %8, align 8
  %22 = mul i64 %20, %21
  store i64 %22, i64* %7, align 8
  %23 = load i64, i64* %7, align 8
  ret i64 %23
}

declare dso_local %struct.fapll_synth* @to_synth(%struct.clk_hw*) #1

declare dso_local i64 @ti_fapll_synth_recalc_rate(%struct.clk_hw*, i64) #1

declare dso_local i64 @readl_relaxed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
